@@ -337,6 +337,7 @@
 		B2D2D3CF2136D5CE00D8F6B7 /* httpd.conf.in */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = httpd.conf.in; sourceTree = "<group>"; };
 		B2D2D3D02136D5CE00D8F6B7 /* mime.types */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = mime.types; sourceTree = "<group>"; };
 		B2D2D5DF21395D6900D8F6B7 /* test_101_ssl_reneg.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_101_ssl_reneg.py; sourceTree = "<group>"; };
+		B2DE12882448B77D001E1478 /* env.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = env.py; sourceTree = "<group>"; };
 		B2E5D7841AAEEF8C001FD280 /* configure.ac */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = configure.ac; sourceTree = "<group>"; xcLanguageSpecificationIdentifier = xcode.lang.sh; };
 		B2E5D7851AAF1D87001FD280 /* Makefile.am */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = Makefile.am; sourceTree = "<group>"; };
 		B2E5D7861AAF1F4D001FD280 /* AUTHORS */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = AUTHORS; sourceTree = "<group>"; };
@@ -813,6 +814,7 @@
 				B297A7C3213EBA780096F0D7 /* echo.py */,
 				B297A7C4213EBC820096F0D7 /* echohd.py */,
 				B2A0C90D2254D15000C8A3FD /* mnot164.py */,
+				B2DE12882448B77D001E1478 /* env.py */,
 			);
 			path = cgi;
 			sourceTree = "<group>";
